syntax="proto3";
package Token.Node.Messages;

message EmptyRequest{}
message EmptyResponse{}

message PeerIdentity{
    string version = 1;
    uint32 block_count = 2;
}

message PeerIdentAck{
    repeated string blocks = 1;
}

message GetBlockRequest{
    string hash = 1;
}